Started fixing mobile layout issues on the Blog page, just need to fix the add blog post button not being shown due to a stylesheet issue.

--- a/wwwroot/scss/mobile.scss
+++ b/wwwroot/scss/mobile.scss
@@ -2,29 +2,32 @@
 
 html, body 
 {
-	height: 150vh;
+	height: 100vh;
 }
 #links, #linksthebutton
 {
 	font-size: 85%;
 }
-#Comment
-{
-	width: 50%;
-}
 .blog
 {
 	max-width: 50vw;
 }
-.commentsection
+table 
+{
+	max-height: 20vh;
+	max-width: 300px;
+	min-width: 300px;
+	width: 300px;
+}
+input, #commentbox
 {
 	width: 100%;
+	font-size: 1em;
 }
-.commentsection .post 
+#app 
 {
-	overflow-x: auto;
-	max-width: 75%;
-	min-width: 75%
+	height: 50vh;
+	overflow: visible;
 }
 @media (min-width: 480px) and (max-width: 720px)
 {
@@ -35,7 +38,7 @@ html, body
 
 	.container 
 	{
-		height: 60vh; /* screen height */
+		height: 100vh; /* screen height */
 		max-height: 65vh;
 		max-width: 100%;
 		top: 5%;
@@ -92,7 +95,7 @@ html, body
 
     .container 
     {
-        height: 60vh; /* screen height */
+        height: 100vh; /* screen height */
         max-height: 65vh;
         max-width: 100%;
         top: 5%;
@@ -148,7 +151,7 @@ html, body
 
 	.container 
 	{
-		height: 60vh; /* screen height */
+		height: 100vh; /* screen height */
 		max-height: 65vh;
 		max-width: 100%;
 		top: 5%;
@@ -206,7 +209,7 @@ html, body
 
     .container 
     {
-        height: 60vh; /* screen height */
+        height: 100vh; /* screen height */
         max-height: 65vh;
         max-width: 100%;
         top: 5%;
